--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
     <welcome-file-list>
-        <welcome-file>login.jsp</welcome-file>
+        <welcome-file>login.html</welcome-file>
     </welcome-file-list>
 
     <filter>
@@ -12,7 +12,7 @@
         <filter-class>filter.PermissionFilter</filter-class>
         <init-param>
             <param-name>notCheckPath</param-name>
-            <param-value>/login.jsp,/CreateVerifyImage.do,/Login.do,/error.jsp,/Logout.do</param-value>
+            <param-value>/login.html,/CreateVerifyImage.do,/AjaxLoginCheck.do,/Logout.do,/register.html,/queryProvinceCity.do</param-value>
         </init-param>
     </filter>
 <!--  //filter过滤映射，对地址后缀为.jsp和.do的请求进行过滤
@@ -36,6 +36,6 @@
     </filter>
     <filter-mapping>
         <filter-name>AutoLoginFilter</filter-name>
-        <url-pattern>/login.jsp</url-pattern>
+        <url-pattern>/login.html</url-pattern>
     </filter-mapping>
 </web-app>
